# ccs-pycalendar

./: .gitignore  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README  pyproject.toml
src/pycalendar/: binaryvalue.py  caladdressvalue.py  componentbase.py  containerbase.py  datetime.py  datetimevalue.py  duration.py  durationvalue.py  exceptions.py  floatvalue.py  geovalue.py  instances.py  integervalue.py  locale.py  manager.py  multivalue.py  outputfilter.py  parameter.py  period.py  plaintextvalue.py  property.py  stringutils.py  timezone.py  timezonedb.py  urivalue.py  utcoffsetvalue.py  utils.py  validation.py  value.py  valueutils.py  xmlutils.py
src/pycalendar/icalendar/: available.py  calendar.py  component.py  componentexpanded.py  componentrecur.py  freebusy.py  property.py  recurrence.py  recurrenceset.py  requeststatusvalue.py  valarm.py  vavailability.py  vevent.py  vfreebusy.py  vjournal.py  vote.py  vpoll.py  vtimezone.py  vtimezonedaylight.py  vtimezoneelement.py  vtimezonestandard.py  vtodo.py  vunknown.py  vvoter.py
src/pycalendar/icalendar/tests/: test_calendar.py  test_componentrecur.py  test_i18n.py  test_vpoll.py  test_xml.py
src/pycalendar/tests/: test_duration.py  test_timezonedb.py
src/pycalendar/vcard/: adr.py  card.py  n.py  orgvalue.py  property.py
src/pycalendar/vcard/tests/: test_card.py
src/zonal/: rule.py  tzconvert.py  tzdump.py  tzverify.py  utils.py  zone.py
